--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="container">
+      <h1>Scrabble point calculator</h1>
       <%= yield %>
     </div>
   </body>
